syntax="proto3";

option go_package = "./";

package proto;

service MovieService{
    rpc CreateMovie(MovieRequest) returns (MovieResponse) {}
    rpc GetMovie(MovieID) returns (MovieResponse) {}
	rpc GetMovies(EmptyRequest) returns (MovieListResponse) {}
    rpc UpdateMovie(MovieRequest) returns (MovieResponse) {}
    rpc DeleteMovie(MovieID) returns (Message) {}
}

message MovieRequest {
    string id = 1;
	string name = 2;
	string description=3;
	string release_date= 4;
	string image = 5;
}

message MovieResponse {
    string id = 1;
	string name = 2;
	string description=3;
	string release_date= 4;
	string image = 5;
}
message MovieListResponse {
    repeated MovieResponse movies = 2;
}
message MovieID {
    string id = 1;
}

message Message {
	string message = 1;
}
message EmptyRequest {}